# network-status-warning-discord

./: .gitignore  CMakeLists.txt  compile.sh  readme.txt  settings.cfg
src/: define.h  discord.c  main.c  ping.c  settings.txt  settings_file.c  settings_file.h  socket_ping.c  socket_ping.h  strsplit.c  strsplit.h
src/include/: define.h  discord.h  ping.h
