cmake_minimum_required(VERSION 3.10)
project(networkStatusWarningDiscord)
include_directories(src/include)
add_executable(networkStatusWarningDiscord src/main.c src/discord.c src/ping.c src/settings_file.c src/socket_ping.c src/strsplit.c)
find_package(LibXml2 REQUIRED)
find_package(CURL REQUIRED)
include_directories(/usr/include/libxml2)
target_link_libraries(networkStatusWarningDiscord PRIVATE LibXml2::LibXml2)
target_link_libraries(networkStatusWarningDiscord PRIVATE CURL::libcurl)
